log
In file included from def.c:1:
def.h:57:14: error: expected ‘{’ before ‘:’ token
   57 | typedef enum : uint64_t {
      |              ^
def.h:77:3: warning: data definition has no type or storage class
   77 | } register_t;
      |   ^~~~~~~~~~
def.h:77:3: warning: type defaults to ‘int’ in declaration of ‘register_t’ [-Wimplicit-int]
In file included from assembler.c:2:
def.h:57:14: error: expected ‘{’ before ‘:’ token
   57 | typedef enum : uint64_t {
      |              ^
def.h:77:3: warning: data definition has no type or storage class
   77 | } register_t;
      |   ^~~~~~~~~~
def.h:77:3: warning: type defaults to ‘int’ in declaration of ‘register_t’ [-Wimplicit-int]
make: *** [Makefile:13: def.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from /usr/include/stdlib.h:395,
                 from make_map.h:6,
                 from label_map.h:4,
                 from assembler.c:3:
/usr/include/sys/types.h:164:13: error: ‘register_t’ redeclared as different kind of symbol
  164 | typedef int register_t __attribute__ ((__mode__ (__word__)));
      |             ^~~~~~~~~~
def.h:77:3: note: previous declaration of ‘register_t’ with type ‘int’
   77 | } register_t;
      |   ^~~~~~~~~~
assembler.c: In function ‘toliteral’:
assembler.c:112:7: error: invalid operands to binary * (have ‘char *’ and ‘int’)
  112 |     s *= *s == '-';
      |       ^~ ~~~~~~~~~
      |             |
      |             int
assembler.c: In function ‘toregister’:
assembler.c:170:16: error: ‘RIP’ undeclared (first use in this function)
  170 |         return RIP;
      |                ^~~
assembler.c:170:16: note: each undeclared identifier is reported only once for each function it appears in
assembler.c:172:16: error: ‘RET’ undeclared (first use in this function)
  172 |         return RET;
      |                ^~~
assembler.c:174:16: error: ‘RSP’ undeclared (first use in this function)
  174 |         return RSP;
      |                ^~~
assembler.c:176:16: error: ‘R00’ undeclared (first use in this function)
  176 |         return R00;
      |                ^~~
assembler.c:178:16: error: ‘R01’ undeclared (first use in this function)
  178 |         return R01;
      |                ^~~
assembler.c:180:16: error: ‘R02’ undeclared (first use in this function)
  180 |         return R02;
      |                ^~~
assembler.c:182:16: error: ‘R03’ undeclared (first use in this function)
  182 |         return R03;
      |                ^~~
assembler.c:184:16: error: ‘R04’ undeclared (first use in this function)
  184 |         return R04;
      |                ^~~
assembler.c:186:16: error: ‘R05’ undeclared (first use in this function)
  186 |         return R05;
      |                ^~~
assembler.c:188:16: error: ‘R06’ undeclared (first use in this function)
  188 |         return R06;
      |                ^~~
assembler.c:190:16: error: ‘R07’ undeclared (first use in this function)
  190 |         return R07;
      |                ^~~
assembler.c:192:16: error: ‘R08’ undeclared (first use in this function)
  192 |         return R08;
      |                ^~~
assembler.c:194:16: error: ‘R09’ undeclared (first use in this function)
  194 |         return R09;
      |                ^~~
assembler.c:196:16: error: ‘R10’ undeclared (first use in this function)
  196 |         return R10;
      |                ^~~
assembler.c:198:16: error: ‘R11’ undeclared (first use in this function)
  198 |         return R11;
      |                ^~~
assembler.c:200:16: error: ‘R12’ undeclared (first use in this function)
  200 |         return R12;
      |                ^~~
assembler.c:202:16: error: ‘R13’ undeclared (first use in this function)
  202 |         return R13;
      |                ^~~
assembler.c:204:16: error: ‘R14’ undeclared (first use in this function)
  204 |         return R14;
      |                ^~~
assembler.c:206:16: error: ‘R15’ undeclared (first use in this function)
  206 |         return R15;
      |                ^~~
make: *** [Makefile:13: assembler.o] Error 1
